<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal"
        android:background="@color/blue_row">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/about_back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_btn_ripple"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="47dp"
            android:textColor="@color/white_txt_color"
            android:fontFamily="sans-serif-medium"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="20dp">

            <ImageView
                android:layout_marginTop="40dp"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:src="@drawable/launch_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/table_txt_color"
                android:text="@string/about_msg"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"/>

            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/usageTv"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="@color/blue_row"
                android:text="@string/usage"
                android:textSize="16sp"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/helpTv"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="@color/blue_row"
                android:text="@string/help"
                android:textSize="16sp"
                android:gravity="center_vertical"/>



            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_txt_color"
                android:text="@string/creds"
                android:textSize="16sp"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/privacyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_txt_color"
                android:textColorLink="@color/grey_txt_color"
                android:text="@string/privacy"
                android:textSize="16sp"
                android:gravity="top"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>