<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/drive_backup"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/grey_txt_color"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:minHeight="120dp"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/before_download_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:visibility="visible">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drive_backup_msg"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/grey_txt_color"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drive_backup_alert"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/grey_txt_color"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/progress_download_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:visibility="gone">
            <ProgressBar
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drive_backup_progress"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/grey_txt_color"/>
        </LinearLayout>

        <TextView
            android:id="@+id/after_download_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drive_backup_progress"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/grey_txt_color"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/download_backup"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:text="@string/download"
            android:textColor="@color/pressed_txt_color"
            android:textAllCaps="false"
            android:background="@drawable/custom_btn_ripple"
            android:textSize="14sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/cancel_backup"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/cancel1"
            android:textColor="@color/pressed_cancel_txt_color"
            android:textAllCaps="false"
            android:background="@drawable/custom_ripple"
            android:textSize="14sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="10dp"/>
    </LinearLayout>



</LinearLayout>