<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="35dp"
    android:paddingRight="25dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/feedback_man"/>

    <TextView
        android:id="@+id/main_rate_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_txt_color"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:text="@string/rate_us_text"/>

    <TextView
        android:id="@+id/give_a_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_txt_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/rate_us_stars"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp"
        />



    <com.whinc.widget.ratingbar.RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        app:rb_max_count="5"
        app:rb_count="5"
        app:rb_empty="@drawable/empty"
        app:rb_fill="@drawable/fill"
        app:rb_space="1dp"
        app:rb_click_rating="true"
        app:rb_touch_rating="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/rate_btn"
        android:layout_width="160dp"
        android:layout_height="37dp"
        android:layout_gravity="end"
        android:text="@string/rate"
        android:textColor="@color/pressed_txt_color"
        android:textAllCaps="false"
        android:background="@drawable/custom_btn_ripple"
        android:textSize="14sp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        />


</LinearLayout>